Implemented operators handlers for creatimng new user and adding car to db
