# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/SignInResp"
+                            "$ref": "#/definitions/SignUpResp"
                         }
                     },
                     "400": {
@@ -55,7 +55,7 @@
         },
         "/sign_up": {
             "post": {
-                "description": "Sign up with login and password",
+                "description": "Create a new user by operator",
                 "consumes": [
                     "application/json"
                 ],
@@ -65,10 +65,10 @@
                 "tags": [
                     "authentication"
                 ],
-                "summary": "Sign up",
+                "summary": "Create new user",
                 "parameters": [
                     {
-                        "description": "Body for sign up",
+                        "description": "Body for creation of a new user",
                         "name": "JSON",
                         "in": "body",
                         "required": true,
@@ -81,7 +81,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/SignUpResp"
+                            "type": ""
                         }
                     },
                     "400": {
@@ -263,20 +263,20 @@
                 }
             }
         },
-        "SignInResp": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
         "SignUpReq": {
             "type": "object",
             "properties": {
+                "account_type": {
+                    "type": "string",
+                    "example": "client"
+                },
                 "email": {
                     "type": "string",
                     "example": "test@example.com"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "TestName"
                 },
                 "password": {
                     "type": "string",
@@ -289,7 +289,7 @@
             "properties": {
                 "token": {
                     "type": "string",
-                    "example": "nausdgtGTGAjndfs.KijIYbsgfsuadfe34r"
+                    "example": "nausdgtGTGAjndfsKijIYbsgfsuadfe34r"
                 }
             }
         }
